Use fading effect on edit-menu for mobile to reduce flicker. Fixed height bug for fullscreen tinymce.

--- a/less/account-menu.less
+++ b/less/account-menu.less
@@ -28,13 +28,11 @@
 
 #bin-menu {
   @media (max-width: 767px) {
-    .open {
-      .account-menu {
-        li {
-          border-bottom: 1px solid @cm-border-color;
-          &:last-child {
-            border-bottom: none;
-          }
+    .account-menu {
+      li {
+        border-bottom: 1px solid @cm-border-color;
+        &:last-child {
+          border-bottom: none;
         }
       }
     }
@@ -42,13 +40,11 @@
 
   @media (min-width: 768px) {
     .bin-menu-item {
-      &.open {
-        .account-menu {
-          width: 210px;
-          left: inherit;
-          border-left: @cm-border-bottom-height solid @cm-border-color;
-          border-right: @cm-border-bottom-height solid @cm-border-color;
-        }
+      .account-menu {
+        width: 210px;
+        left: inherit;
+        border-left: @cm-border-bottom-height solid @cm-border-color;
+        border-right: @cm-border-bottom-height solid @cm-border-color;
       }
     }
   }
