--- a/less/tinymce.less
+++ b/less/tinymce.less
@@ -4,12 +4,10 @@ body.mce-fullscreen {
   &.mobile, &.tablet {
     #bin-menu {
       .bin-menu-item {
-        &.open {
-          .bin-menu-edit {
-            .bin-menu-edit-body {
-              .mce-fullscreen {
-                top: @cm-total-height;
-              }
+        .bin-menu-edit {
+          .bin-menu-edit-body {
+            .mce-fullscreen {
+              top: @cm-total-height;
             }
           }
         }
@@ -22,16 +20,15 @@ body.mce-fullscreen {
       top: -@cm-total-height;
 
       .bin-menu-item {
-        &.open {
-          .bin-menu-edit {
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            margin: 0;
-            width: 100%;
-            height: 100%;
-          }
+        .bin-menu-edit {
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          margin: 0;
+          width: 100%;
+          height: 100%;
+          max-height: 100%;
         }
       }
 
